chore: prevent loading-script project to bump version for dependencies

--- a/packages/loading-scripts/project.json
+++ b/packages/loading-scripts/project.json
@@ -44,8 +44,7 @@
       "executor": "@jscutlery/semver:version",
       "options": {
         "preset": "conventionalcommits",
-        "tagPrefix": "{projectName}@",
-        "trackDeps": true
+        "tagPrefix": "{projectName}@"
       }
     },
     "github": {
