--- a/packages/loading-scripts/package.json
+++ b/packages/loading-scripts/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.58",
   "private": true,
   "description": "Loading script for RudderStack JavaScript SDK",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "keywords": [
     "analytics",
     "rudder"
