--- a/.github/workflows/update-cache-policy.yml
+++ b/.github/workflows/update-cache-policy.yml
@@ -49,13 +49,19 @@ jobs:
 
       - name: Update cache control policy
         run: |
-          aws s3api list-objects --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} --prefix adobe-analytics-js --query "Contents[].Key" --output text | tr '\t' '\n' | while read key; do
-              aws s3api copy-object \
-                  --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} \
-                  --copy-source "${{ secrets.AWS_PROD_S3_BUCKET_NAME }}/$key" \
-                  --key "$key" \
-                  --metadata-directive REPLACE \
-                  --cache-control "${{ env.cache_control_policy }}"
+          prefixes=("adobe-analytics-js" "latest")
+          
+          for prefix in "${prefixes[@]}"; do
+            echo "Processing prefix: $prefix"
+            
+            aws s3api list-objects --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} --prefix "$prefix" --query "Contents[].Key" --output text | tr '\t' '\n' | while read key; do
+                aws s3api copy-object \
+                    --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} \
+                    --copy-source "${{ secrets.AWS_PROD_S3_BUCKET_NAME }}/$key" \
+                    --key "$key" \
+                    --metadata-directive REPLACE \
+                    --cache-control "${{ env.cache_control_policy }}"
+            done
           done
 
 
