--- a/.github/workflows/update-cache-policy.yml
+++ b/.github/workflows/update-cache-policy.yml
@@ -49,19 +49,24 @@ jobs:
 
       - name: Update cache control policy
         run: |
+          # Get the number of CPU cores in the runner and leave one core free
+          num_cores=$(nproc --ignore=1 || echo 1) # Default to 1 if nproc is unavailable
+          # Use a factor to set the parallel jobs (e.g., number of cores or slightly lower)
+          parallel_jobs=$((num_cores * 2))
+          echo "Detected $num_cores cores. Using $parallel_jobs parallel jobs."
+
           prefixes=("adobe-analytics-js" "latest")
           
           for prefix in "${prefixes[@]}"; do
             echo "Processing prefix: $prefix"
             
-            aws s3api list-objects --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} --prefix "$prefix" --query "Contents[].Key" --output text | tr '\t' '\n' | while read key; do
-                aws s3api copy-object \
-                    --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} \
-                    --copy-source "${{ secrets.AWS_PROD_S3_BUCKET_NAME }}/$key" \
-                    --key "$key" \
-                    --metadata-directive REPLACE \
-                    --cache-control "${{ env.cache_control_policy }}"
-            done
+            aws s3api list-objects --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} --prefix "$prefix" --query "Contents[].Key" --output text | tr '\t' '\n' | \
+            --retries 3 parallel -j "$parallel_jobs" "aws s3api copy-object \
+                --bucket ${{ secrets.AWS_PROD_S3_BUCKET_NAME }} \
+                --copy-source ${{ secrets.AWS_PROD_S3_BUCKET_NAME }}/{} \
+                --key {} \
+                --metadata-directive REPLACE \
+                --cache-control '${{ env.cache_control_policy }}'"
           done
 
 
