--- a/.github/workflows/update-cache-policy.yml
+++ b/.github/workflows/update-cache-policy.yml
@@ -39,8 +39,11 @@ jobs:
           TEAM_NAME: js-sdk
         run: |
           actor=${{ github.actor || github.triggering_actor }}
-          response=$(curl -s -H "Authorization: Bearer ${{ secrets.PAT }}" \
-            "https://api.github.com/orgs/$ORG_NAME/teams/$TEAM_NAME/members/$actor")
+          response=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PAT }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/orgs/${{ env.ORG_NAME }}/teams/${{ env.TEAM_NAME }}/memberships/$actor)
           
           if echo "$response" | grep -q '"state": "active"'; then
             echo "$actor is a member of $TEAM_NAME"
