--- a/.github/workflows/update-cache-policy.yml
+++ b/.github/workflows/update-cache-policy.yml
@@ -45,6 +45,8 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/orgs/${{ env.ORG_NAME }}/teams/${{ env.TEAM_NAME }}/memberships/$actor)
           
+          echo "Response: $response"
+          
           if echo "$response" | grep -q '"state": "active"'; then
             echo "$actor is a member of $TEAM_NAME"
           else
