--- a/.github/workflows/update-cache-policy.yml
+++ b/.github/workflows/update-cache-policy.yml
@@ -22,7 +22,7 @@ on:
         required: true
       AWS_PROD_S3_SYNC_ROLE:
         required: true
-      PAT:
+      GITHUB_TOKEN:
         required: true
 
 permissions:
@@ -41,7 +41,7 @@ jobs:
           actor=${{ github.actor || github.triggering_actor }}
           response=$(curl -L \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.PAT }}" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/orgs/${{ env.ORG_NAME }}/teams/${{ env.TEAM_NAME }}/memberships/$actor)
           
