--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -10,9 +10,7 @@ on:
 jobs:
   validate-actor:
     # Run only for workflow_dispatch events with a merged pull request
-    if: >
-      github.event_name == 'workflow_dispatch' &&
-      github.event.pull_request.merged == true
+    if: github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/validate-actor.yml
     secrets:
       PAT: ${{ secrets.PAT }}
@@ -22,7 +20,17 @@ jobs:
     name: Deploy to Development Environment
     if: >
       (needs.validate-actor.result == 'success' || needs.validate-actor.result == 'skipped') &&
-      github.event.pull_request.merged == true
+      (
+        github.event.pull_request.merged == true ||
+        (
+          github.event_name == 'workflow_dispatch' &&
+          (
+            startsWith(github.ref, 'refs/tags/v') ||
+            github.ref == 'refs/heads/develop' ||
+            github.ref == 'refs/heads/main'
+          )
+        )
+      )
     uses: ./.github/workflows/deploy.yml
     with:
       environment: 'development'
