--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -26,10 +26,8 @@ env:
 
 jobs:
   validate-actor:
-    # Run validation for workflow_dispatch with tags
-    if: >
-      github.event_name == 'workflow_dispatch' &&
-      startsWith(github.ref, 'refs/tags/v')
+    # Run validation for workflow_dispatch
+    if: github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/validate-actor.yml
     secrets:
       PAT: ${{ secrets.PAT }}
@@ -42,7 +40,14 @@ jobs:
     # Deploy if validate-actor was successful or skipped
     # or if the workflow was invoked by another workflow
     if: >
-      (needs.validate-actor.result == 'success' || needs.validate-actor.result == 'skipped') || inputs.is_called == 'true'
+      (needs.validate-actor.result == 'success' || needs.validate-actor.result == 'skipped') &&
+      (
+        inputs.is_called == 'true' ||
+        (
+          github.event_name == 'workflow_dispatch' &&
+          startsWith(github.ref, 'refs/tags/v')
+        )
+      )
 
     steps:
       - name: Checkout
