--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -11,13 +11,7 @@ on:
 
 jobs:
   validate-actor:
-    if: >
-      github.event_name == 'workflow_dispatch' &&
-      (
-        startsWith(github.ref, 'refs/tags/v') ||
-        startsWith(github.head_ref, 'hotfix-release/') ||
-        startsWith(github.head_ref, 'release/')
-      )
+    if: github.event_name == 'workflow_dispatch'
     uses: ./.github/workflows/validate-actor.yml
     secrets:
       PAT: ${{ secrets.PAT }}
