chore: fix test target

--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -112,6 +112,7 @@
     "build": "npm run build:browser && npm run build:package",
     "build:modern": "npm run build:browser:modern && npm run build:package:modern",
     "build:browser": "rollup -c --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,ENV:prod",
+    "build:browser:dev": "rollup -c --environment PROD_DEBUG",
     "build:browser:modern": "BROWSERSLIST_ENV=modern npm run build:browser",
     "build:package": "npm run build:npm && npm run build:npm:bundled && npm run build:npm:content-script",
     "build:package:modern": "npm run build:npm:modern && npm run build:npm:bundled:modern && npm run build:npm:content-script:modern",
@@ -121,9 +122,8 @@
     "build:npm:bundled:modern": "BUNDLED_PLUGINS=all npm run build:npm:modern",
     "build:npm:content-script": "BUNDLED_PLUGINS=all NO_EXTERNAL_HOST=true npm run build:npm",
     "build:npm:content-script:modern": "BUNDLED_PLUGINS=all NO_EXTERNAL_HOST=true npm run build:npm:modern",
-    "build:browser:test": "ONLY_IIFE=true npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/cdn/legacy/iife/rsa.min.js > __mocks__/cdnSDK.js",
-    "test": "npm run build:browser:test && nx test --maxWorkers=50%",
-    "test:ci": "npm run build:browser:test && nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
+    "test": "nx test --maxWorkers=50%",
+    "test:ci": "nx test --configuration=ci --runInBand --maxWorkers=1 --forceExit",
     "check:lint": "nx lint",
     "check:lint:ci": "nx lint --configuration=ci",
     "check:size:build": "npm run build:browser && npm run build:browser:modern && npm run build:package && npm run build:package:modern",
