--- a/.github/workflows/unit-tests-and-lint.yml
+++ b/.github/workflows/unit-tests-and-lint.yml
@@ -58,6 +58,7 @@ jobs:
           npm run check:lint:ci
 
       - name: Fix filesystem paths in generated reports
+        if: false
         run: |
           ./scripts/fix-reports-path-in-github-runner.sh
 
